--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,5 +1,4 @@
 name: API Deployment
-
 env:
   registryName: m3hwlbiw466g4cosureg.azurecr.io
   repositoryName: techexcel/csapi
@@ -65,7 +64,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://{your_prefix}-api.azurewebsites.net/
+      url: https://m3hwlbiw466g4-api.azurewebsites.net/
     
     steps:
     - uses: actions/checkout@v4
@@ -78,4 +77,4 @@ jobs:
     - uses: azure/webapps-deploy@v2
       with:
         app-name: '{your_prefix}-api'
-        images: {your_registry_name}.azurecr.io/techexcel/csapi:${{github.run_number}}
+        images: m3hwlbiw466g4cosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
