--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -54,7 +54,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://{your_prefix}-dash.azurewebsites.net/
+      url: https://m3hwlbiw466g4-dash.azurewebsites.net/
     
     steps:
     - uses: actions/checkout@v4
@@ -67,4 +67,4 @@ jobs:
     - uses: azure/webapps-deploy@v2
       with:
         app-name: '{your_prefix}-dash'
-        images: {your_registry_name}.azurecr.io/techexcel/csdash:${{github.run_number}}
+        images: m3hwlbiw466g4cosureg.azurecr.io/techexcel/csdash:${{github.run_number}}
