--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -54,7 +54,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://m3hwlbiw466g4-dash.azurewebsites.net/
+      url: https://m3hwlbiw466g4-dash.azurewebsites.net
     
     steps:
     - uses: actions/checkout@v4
