--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -66,5 +66,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'm3hwlbiw466g4cosureg-dash'
+        app-name: m3hwlbiw466g4-dash
         images: m3hwlbiw466g4cosureg.azurecr.io/techexcel/csdash:${{github.run_number}}
